...
    onViewMoreClick: () -> Unit,
    onHeadlineItemClick: (id: Int) -> Unit,
    onFavouriteHeadlineChange: (NewsyArticle) -> Unit,
) {
    item {
        HeaderTitle(
            title = "Hot News",
            icon = Icons.Default.Build
        )
        Spacer(modifier = Modifier.size(itemSpacing))
    }

    item {
...
    onItemClick: (id: Int) -> Unit,
    onCategoryChange: (ArticleCategory) -> Unit,
    onFavouriteChange: (article: DomainContract) -> Unit,
) {
    item {
        HeaderTitle(
            title = "Discover News",
            icon = Icons.Default.Build
        )
        Spacer(modifier = Modifier.size(itemSpacing))
        DiscoverChips(
            selectedCategory = homeState.selectedDiscoverCategory,
            categories = categories,
...
