...
            modifier = Modifier
                .testTag(TestTags.HeadlineLazyColumnTestTag)
                .padding(innerPadding)
        ) {
            item {
                HeaderTitle(
                    title = "Hot news",
                    icon = Icons.Default.Star
                )
                Spacer(Modifier.size(itemSpacing))
            }
             items(count = articles.itemCount) { value ->
               articles[value]?.let {
...
